# pd_code_delete_nugatory

./: README.md  pyproject.toml
pd_code_delete_nugatory/: __init__.py  main.py
tests/: test_nugatory.py
