[project]
name = "pd-code-delete-nugatory"
version = "0.2.0"
description = "delete all nugatory crossing from a pd_code (link or knot)."
authors = [
    {name = "GGN_2015",email = "neko@jlulug.org"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pd-code-de-r1>=0.1.1",
    "pd-code-pre-nxt>=0.1.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
