[project]
name = "pd-code-delete-nugatory"
version = "0.2.1"
description = "Detect and remove nugatory crossings from knot or link PD codes."
authors = [
    {name = "GGN_2015",email = "neko@jlulug.org"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = []


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
